--- a/app/src/main/res/layout/activity_diagnostics_report.xml
+++ b/app/src/main/res/layout/activity_diagnostics_report.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Diagnostics_Report">
+    tools:context=".Diagnostics_Report"
+    android:background="@drawable/else_background"
+    >
 
     <TextView
         android:id="@+id/textView"
