--- a/app/src/main/res/layout/activity_diagnostics_report.xml
+++ b/app/src/main/res/layout/activity_diagnostics_report.xml
@@ -4,15 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Diagnostics_Report"
-    android:background="@drawable/else_background"
-    >
+    tools:context=".Diagnostics_Report">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="104dp"
         android:layout_marginTop="43dp"
         android:text="Diagnostics Report"
         android:textAlignment="center"
