--- a/app/src/main/res/layout/activity_diagnostics_report.xml
+++ b/app/src/main/res/layout/activity_diagnostics_report.xml
@@ -4,17 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Diagnostics_Report">
+    tools:context=".Diagnostics_Report"
+    android:background="@drawable/else_background"
+    >
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="43dp"
         android:text="Diagnostics Report"
         android:textAlignment="center"
+        android:textColor="#24D62C"
         android:textSize="24sp"
         android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+
+        android:layout_marginTop="200dp"
+        android:ems="16"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:textColor="#F5F5F5" />
 
 </RelativeLayout>
